--- a/training/machineSetup/ubuntu.textile
+++ b/training/machineSetup/ubuntu.textile
@@ -1,3 +1,9 @@
+"home":../../index.html > "Training":../index.html > "Machine Setup":index.html > Ubuntu
+
+p(toc). Table of Contents
+
+{toc}
+
 h1. Ubunut Setup
 
 h2. Startup, Shutdown, Scripts
