--- a/jeos/index.textile
+++ b/jeos/index.textile
@@ -3,10 +3,11 @@
 p(toc). Navigation
 
 !(icon)/images/folder.gif! "Content":content/index.html
-!(icon)/images/file.gif! "Oracle Enterprise Linux on Oracle Virtual Machine":oel.html
-!(icon)/images/file.gif! "OEL Detail Setup":oel_detail_setup.html
-!(icon)/images/file.gif! "Prepping a new system":prepping_a_new_system.html
-!(icon)/images/file.gif! "OC4J Standalone":stand-alone_container_instructions.html
+!(icon)/images/file.gif! "DB 11g":db11g/db11g.html
 !(icon)/images/file.gif! "DNS Server":dns_server.html
-!(icon)/images/file.gif! "OVM Manager Setup":ovm_manager/ovm_manager_setupInstructions.html
+!(icon)/images/file.gif! "JEOS-OEL-OVM":oel.html
+!(icon)/images/file.gif! "OEL Detail Setup":oel_detail_setup.html
+!(icon)/images/file.gif! "OC4J Standalone":stand-alone_container_instructions.html
+!(icon)/images/file.gif! "Setting up an Oracle Virtual Machine Lab":SettingUpVirtualLab.html
+!(icon)/images/file.gif! "Prepping a new system":prepping_a_new_system.html
 !(icon)/images/file.gif! "Virtual Machines":virtualMachines.html
