--- a/training/latex.textile
+++ b/training/latex.textile
@@ -335,7 +335,8 @@ h2. Comments
 
 @%@ is used at the beginning of a line to make a comment
 
-If you put \usepackage{verbatim} at the start of your file, you can do multiline comments like this:
+If you put \usepackage{verbatim} at the start of your file, 
+you can do multiline comments like this:
 
 \begin{comment}
 Here is the first line of the comment.
@@ -362,8 +363,41 @@ bc.
 
 h2. Special Characters
 
+Prefix the following characters with a backslash to have them display as is.
+
 bc. 
 \ { } $ ^ _ % ~ # &
+
+ampersand, tilde, dollar sign, underscore, carrot, hash, percent, parenthesis, back slash
+
+
+h2. Sample Letter
+
+bc. 
+\documentclass[final,letterpaper,12pt]{letter}
+\date{\today}
+\name
+{
+Fenton Oliver Travers\\
+G/F 68 Wang Long Village\\
+Lamma Island, Hong Kong
+}
+\begin{document}
+\def \body
+{
+This letter authorizes Margaret Squires, to apply for a Secondary Suite
+in the basement of 1527 East 19th Avenue, Vancouver, BC, V5N 2T8, on my
+behalf.
+}
+\begin{letter}{
+COMMUNITY SERVICES GROUP \\
+Licences and Inspections \\
+By-Law Administration and \\
+Records Services Branch
+}
+\opening{Dear Sir or Madam:} \body \closing{Respectfully,}
+\end{letter}
+\end{document}
 
 h1. Programming
 
